--- a/store.html
+++ b/store.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Cumi</span>
-                    <img class="shop-item-image" src="Images/Cumi.jpg">
+                    <img class="shop-item-image" src="Images/dish-1.png">
                     <h2 class="shop-item-price">30.000</h2>
                     <div class="shop-item-details">
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
