--- a/store.html
+++ b/store.html
@@ -89,7 +89,62 @@
                     <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                 </div>
             </div>
-            
+            <div class="shop-item">
+                <span class="shop-item-title">Tea Manis</span>
+                <img class="shop-item-image" src="Images/tea manis.jpg">
+                <h2 class="shop-item-price">5.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Es Teh Tawar</span>
+                <img class="shop-item-image" src="Images/tea manis.jpg">
+                <h2 class="shop-item-price">7.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Es Jeruk Nipis/Manis</span>
+                <img class="shop-item-image" src="Images/jeruk.jpg">
+                <h2 class="shop-item-price">10.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Es Sirup</span>
+                <img class="shop-item-image" src="Images/Es Sirup.jpg">
+                <h2 class="shop-item-price">5.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Milo</span>
+                <img class="shop-item-image" src="Images/milo.jpg">
+                <h2 class="shop-item-price">8.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Lemon Tea /ES</span>
+                <img class="shop-item-image" src="Images/lemon.jpg">
+                <h2 class="shop-item-price">20.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
+            <div class="shop-item">
+                <span class="shop-item-title">Cappucino</span>
+                <img class="shop-item-image" src="Images/cappucino.jpg">
+                <h2 class="shop-item-price">20.000</h2>
+                <div class="shop-item-details">
+                    <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                </div>
+            </div>
     </div>
         </section>
        
